<resources>
    <string name="ERROR_MSG_CERTIFICATE_EVALUATION_PERIOD">Your evaluation period has expired.\10Please contact Morpho.</string>
    <string name="ERROR_MSG_CERTIFICATE_INVALID_SIGNATURE">The signature for the application is invalid.\10Please contact Morpho.</string>
    <string name="KEY_ABOUT">KEY_ABOUT</string>
    <string name="KEY_ANTI_BANDING">KEY_AB</string>
    <string name="KEY_ANTI_FLICKER_FREQ">KEY_ANTI_FLICKER_FREQ</string>
    <string name="KEY_AOVX">KEY_AOVX</string>
    <string name="KEY_AOVY">KEY_AOVY</string>
    <string name="KEY_AOV_GAIN">KEY_AOV_GAIN</string>
    <string name="KEY_AUTO_EXPOSURE_LOCK">KEY_AE_LOCK</string>
    <string name="KEY_AUTO_WHITE_BALANCE_LOCK">KEY_AWB_LOCK</string>
    <string name="KEY_CALCSEAM_PIXNUM">KEY_CALCSEAM_PIXNUM</string>
    <string name="KEY_CAMERA_ID">KEY_CAMERA_ID</string>
    <string name="KEY_CAPTURE_MODE">KEY_CAPTURE_MODE</string>
    <string name="KEY_CAPTURE_SIZE">KEY_CAMERA_SIZE</string>
    <string name="KEY_COLOR_CORRECTION_MODE">KEY_COLOR_CORRECTION_MODE</string>
    <string name="KEY_DEFORM">KEY_DEFORM</string>
    <string name="KEY_DISTORTION_K1">KEY_DISTORTION_K1</string>
    <string name="KEY_DISTORTION_K2">KEY_DISTORTION_K2</string>
    <string name="KEY_DISTORTION_K3">KEY_DISTORTION_K3</string>
    <string name="KEY_DISTORTION_K4">KEY_DISTORTION_K4</string>
    <string name="KEY_DRAW_THRESHOLD">KEY_DRAW_THRESHOLD</string>
    <string name="KEY_EDGE_MODE">KEY_EDGE_MODE</string>
    <string name="KEY_FOCUS_MODE">KEY_FOCUS_MODE</string>
    <string name="KEY_GPS">KEY_GPS</string>
    <string name="KEY_HARDWARE_LEVEL">KEY_HARDWARE_LEVEL</string>
    <string name="KEY_INPUT_MOVIE_FPS">KEY_INPUT_MOVIE_FPS</string>
    <string name="KEY_LUMINANCE_CORRECTION">KEY_LUMINANCE_CORRECTION</string>
    <string name="KEY_MAKE_360">KEY_MAKE_360</string>
    <string name="KEY_MOTION_DETECTION_MODE">KEY_MOTION_DETECTION_MODE</string>
    <string name="KEY_NOISE_REDUCTION_MODE">KEY_NOISE_REDUCTION_MODE</string>
    <string name="KEY_NR_AUTO">KEY_NR_AUTO</string>
    <string name="KEY_NR_STRENGTH">KEY_NR_STRENGTH</string>
    <string name="KEY_OIS">KEY_OIS</string>
    <string name="KEY_PROJECTION_MODE">KEY_PROJECTION_MODE</string>
    <string name="KEY_RENDERING_AREA">KEY_RENDERING_AREA</string>
    <string name="KEY_REPLAY">KEY_REPLAY</string>
    <string name="KEY_ROTATION_RATIO">KEY_ROTATION_RATIO</string>
    <string name="KEY_SAVE_INPUT_IMAGES">KEY_SAVE_IMG</string>
    <string name="KEY_SEAMSEARCH_RATIO">KEY_SEAMSEARCH_RATIO</string>
    <string name="KEY_SENSOR_MODE">KEY_SENSOR_MODE</string>
    <string name="KEY_SENSOR_USE_MODE">KEY_SENSOR_USE_MODE</string>
    <string name="KEY_SHADING_MODE">KEY_SHADING_MODE</string>
    <string name="KEY_SHRINK_RATIO">KEY_SHRINK_RATIO</string>
    <string name="KEY_TIMESTAMP_SOURCE">KEY_TIMESTAMP_SOURCE</string>
    <string name="KEY_TONEMAP_MODE">KEY_TONEMAP_MODE</string>
    <string name="KEY_UI_CONTROL_MODE">KEY_UI_CONTROL_MODE</string>
    <string name="KEY_UNSHARP_STRENGTH">KEY_UNSHARP_STRENGTH</string>
    <string name="KEY_USE_60FPS">KEY_USE_60FPS</string>
    <string name="KEY_USE_CAMERA2">KEY_USE_CAMERA2</string>
    <string name="KEY_USE_GRAVITY_SENSOR">KEY_USE_GRAVITY_SENSOR</string>
    <string name="KEY_USE_ROUND_AUTO_END">KEY_USE_ROUND_AUTO_END</string>
    <string name="KEY_USE_WDR2">KEY_USE_WDR2</string>
    <string name="KEY_ZROTATION_COEFF">KEY_ZROTATION_COEFF</string>
    <string name="MSG_CANCEL_CAPTURE">Cancelling...</string>
    <string name="MSG_MISALIGNMENT">Keep arrow on the white line as much as possible.\10Capture stopped</string>
    <string name="MSG_MOVE_CAMERA_SLOWLY">Move the camera very slowly when capturing</string>
    <string name="MSG_SAVE_OUTPUT_IMAGE">Saving panorama image ...</string>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="depth_summary">Able to adjust depth in the editor. For photo mode only and resolution will be changed</string>
    <string name="enable_algorithms_summary">Enable tripartite algorithms,such as HDR</string>
    <string name="grid_summary">Show the rule of thirds in viewfinder</string>
    <string name="help_tip_welcome_cancel_tour">NO THANKS</string>
    <string name="help_tip_welcome_context">Take a tour and get help tips on how to use your new smartphone’s camera?</string>
    <string name="help_tip_welcome_take_tour">Yes please</string>
    <string name="help_tip_welcome_title">Camera</string>
    <string name="location_tag_summary">Save photo location information</string>
    <string name="low_light_summary">Take picture in low light mode</string>
    <string name="mirror_photos_summary">Save photos in mirror mode</string>
    <string name="panoramagp3_ABOUT">About</string>
    <string name="panoramagp3_ABOUT_TITLE">About PanoramaGP3</string>
    <string name="panoramagp3_BTN_LBL_AUTO">Auto</string>
    <string name="panoramagp3_BTN_LBL_MANUAL">Manual</string>
    <string name="panoramagp3_BTN_LBL_TV">Tv</string>
    <string name="panoramagp3_BTN_LBL_TV_SIMPLE">AutoEx</string>
    <string name="panoramagp3_LBL_EV">+/-</string>
    <string name="panoramagp3_LBL_FPS">FPS</string>
    <string name="panoramagp3_LBL_ISO">ISO</string>
    <string name="panoramagp3_LBL_SS">SS</string>
    <string name="photo_from_front_title">Photos from front camera</string>
    <string name="photo_from_rear_title">Photos from rear camera</string>
    <string name="pref_camera_depth_title">Depth</string>
    <string name="pref_camera_enable_algorithm_title">Enable tripartite algorithms</string>
    <string name="pref_camera_grid_title">Grid</string>
    <string name="pref_camera_low_light_title">Low light</string>
    <string name="pref_camera_mirror_selfie_title">Mirror photos for front camera</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Location tag</string>
    <string name="pref_camera_savepath_default">0</string>
    <string name="pref_camera_savepath_title">Data storage</string>
    <string name="pref_camera_sound_title">Shutter sound</string>
    <string name="pref_camera_video_quality_default_front">0</string>
    <string name="pref_camera_video_quality_default_rear">0</string>
    <string name="pref_raw_file_format_title">RAW Files support</string>
    <string name="pref_resolution_title">Photo Resolution</string>
    <string name="pref_resolution_video_title">Video Resolution</string>
    <string name="pref_restore_settings">Reset to factory settings</string>
    <string name="pref_shutter_controller_title">Burst shots</string>
    <string name="raw_file_format_support_summary">Photo and Pro mode only</string>
    <string name="reset_to_factory_summary">Restore camera to its default settings</string>
    <string name="resolution_summary">Set aspect ratio and resolution of photo for rear and front cameras</string>
    <string name="resolution_video_summary">Set aspect ratio and resolution of video for rear and front cameras</string>
    <string name="restore_settings_dialog_no">Cancel</string>
    <string name="setting_ANTI_BANDING">Anti-banding</string>
    <string name="setting_ANTI_FLICKER_FREQ">AntiFlicker Freq</string>
    <string name="setting_AOVX">AovX</string>
    <string name="setting_AOVY">AovY</string>
    <string name="setting_AOV_GAIN">Aov gain</string>
    <string name="setting_AUTO_EXPOSURE_LOCK">Auto exposure lock</string>
    <string name="setting_AUTO_WHITE_BALANCE_LOCK">Auto white balance lock</string>
    <string name="setting_CALCSEAM_PIXNUM">Calcseam pixnum</string>
    <string name="setting_CAMERA_ID">Select camera</string>
    <string name="setting_CAPTURE_MODE">CaptureMode</string>
    <string name="setting_COLOR_CORRECTION_MODE">Color correction mode</string>
    <string name="setting_DEFORM">Use deform</string>
    <string name="setting_DISTORTION_K1">Distortion correction param k1</string>
    <string name="setting_DISTORTION_K2">Distortion correction param k2</string>
    <string name="setting_DISTORTION_K3">Distortion correction param k3</string>
    <string name="setting_DISTORTION_K4">Distortion correction param k4</string>
    <string name="setting_DRAW_THRESHOLD">Draw threshold (0.0 ~ 360.0)</string>
    <string name="setting_EDGE_MODE">Edge mode</string>
    <string name="setting_FOCUS_MODE">Focus mode</string>
    <string name="setting_GPS">GPS</string>
    <string name="setting_INPUT_MOVIE_FPS">Input movie fps (1.0 ~ 60.0)</string>
    <string name="setting_KEY_USE_CAMERA2">Use camera2 API</string>
    <string name="setting_LUMINANCE_CORRECTION">Use luminance correction</string>
    <string name="setting_MAKE_360">Make 360</string>
    <string name="setting_MOTION_DETECTION_MODE">Motion detection mode</string>
    <string name="setting_NOISE_REDUCTION_MODE">Noise reduction mode</string>
    <string name="setting_NR_AUTO">Set Edge, NR param automatically</string>
    <string name="setting_NR_STRENGTH">Noise reduction param (0 ~ 50)</string>
    <string name="setting_OIS">OIS</string>
    <string name="setting_PREVIEW_SIZE">Camera preview size</string>
    <string name="setting_PROJECTION_MODE">Projection mode</string>
    <string name="setting_ROTATION_RATIO">Rotation ratio</string>
    <string name="setting_ROUND_AUTO_END">360 auto end</string>
    <string name="setting_SAVE_INPUT_IMAGES">Save input images</string>
    <string name="setting_SEAMSEARCH_RATIO">Seamsearch ratio (0.0 ~ 1.0)</string>
    <string name="setting_SENSOR_MODE">Sensor mode</string>
    <string name="setting_SENSOR_USE_MODE">Sensor use mode</string>
    <string name="setting_SHADING_MODE">Shading mode</string>
    <string name="setting_SHRINK_RATIO">Shrink ratio (1.0 ~ 32.0)</string>
    <string name="setting_TONEMAP_MODE">Tonemap mode</string>
    <string name="setting_UI_CONTROL_MODE">UI control mode</string>
    <string name="setting_UNSHARP_STRENGTH">Unsharp strength (0 ~ 8192)</string>
    <string name="setting_USE_60FPS">Use 60fps</string>
    <string name="setting_USE_GRAVITY_SENSOR">Use gravity sensor</string>
    <string name="setting_USE_WDR2">Use WDR2</string>
    <string name="setting_ZROTATION_COEFF">Z rotation coeff (0.0 ~ 1.0)</string>
    <string name="setting_group_general">General</string>
    <string name="setting_group_photo">Photo</string>
    <string name="setting_group_reset">Reset</string>
    <string name="setting_group_video">Video</string>
    <string name="shutter_control_summary">Long press on shutter does burst photos</string>
    <string name="shutter_sound_summary">The sound of taking photos</string>
    <string name="tiny_planet_rotate">Rotate</string>
    <string name="tiny_planet_zoom">Zoom</string>
    <string name="video_from_front_title">Video from front camera</string>
    <string name="video_from_rear_title">Video from rear camera</string>
</resources>