<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:camera="http://schemas.android.com/apk/res/com.hmdglobal.app.camera" android:title="@string/pref_resolution_title">
    <ListPreference android:title="@string/photo_from_rear_title" android:key="pref_camera_picturesize_back_key" android:defaultValue="@string/pref_camera_picturesize_default" android:negativeButtonText="@string/restore_settings_dialog_no" android:entryValues="@array/pref_camera_picturesize_entryvalues"/>
    <ListPreference android:title="@string/photo_from_front_title" android:key="pref_camera_picturesize_front_key" android:defaultValue="@string/pref_camera_picturesize_default" android:negativeButtonText="@string/restore_settings_dialog_no" android:entryValues="@array/pref_camera_picturesize_entryvalues"/>
    <ListPreference android:title="@string/video_from_rear_title" android:key="pref_video_quality_back_key" android:defaultValue="@string/pref_camera_video_quality_default_rear" android:negativeButtonText="@string/restore_settings_dialog_no" android:entryValues="@array/pref_video_quality_entryvalues"/>
    <ListPreference android:title="@string/video_from_front_title" android:key="pref_video_quality_front_key" android:defaultValue="@string/pref_camera_video_quality_default_front" android:negativeButtonText="@string/restore_settings_dialog_no" android:entryValues="@array/pref_video_quality_entryvalues"/>
</PreferenceScreen>
