<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:camera="http://schemas.android.com/apk/res/com.hmdglobal.app.camera" android:gravity="center" android:orientation="vertical" android:id="@+id/take_tour_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="30sp" android:textStyle="bold" android:textColor="#ffffff" android:layout_gravity="left|center_vertical|center_horizontal|center" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:text="@string/help_tip_welcome_title"/>
    <TextView android:textSize="18sp" android:textColor="#ffffff" android:gravity="left" android:layout_gravity="left" android:id="@+id/context" android:layout_width="332dp" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginTop="10dp" android:text="@string/help_tip_welcome_context" android:fontFamily="sans-serif-medium"/>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/welcome_btn_layout" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="28dp" android:weightSum="1">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.75"/>
        <Button android:textSize="14sp" android:textColor="#ff000000" android:id="@+id/take_tour_btn" android:background="#ffffff" android:layout_width="109dp" android:layout_height="36dp" android:text="@string/help_tip_welcome_take_tour"/>
        <Button android:textSize="14sp" android:textColor="#ffffff" android:id="@+id/cancel_tour_btn" android:background="@android:color/black" android:layout_width="109dp" android:layout_height="36dp" android:layout_marginLeft="8dp" android:text="@string/help_tip_welcome_cancel_tour"/>
    </LinearLayout>
</LinearLayout>
